fixed layout problems on technician user :lipstick:

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1177,6 +1177,15 @@ select {
 .w-14 {
   width: 3.5rem;
 }
+.w-1\/5 {
+  width: 20%;
+}
+.w-1\/12 {
+  width: 8.333333%;
+}
+.w-5\/12 {
+  width: 41.666667%;
+}
 .min-w-0 {
   min-width: 0px;
 }
@@ -1265,6 +1274,9 @@ select {
 .flex-wrap {
   flex-wrap: wrap;
 }
+.content-center {
+  align-content: center;
+}
 .items-center {
   align-items: center;
 }
@@ -1326,9 +1338,6 @@ select {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-}
-.break-all {
-  word-break: break-all;
 }
 .rounded-md {
   border-radius: 0.375rem;
@@ -1523,9 +1532,6 @@ select {
 .p-12 {
   padding: 3rem;
 }
-.p-16 {
-  padding: 4rem;
-}
 .px-4 {
   padding-left: 24px;
   padding-right: 24px;
@@ -1610,10 +1616,6 @@ select {
   padding-top: 6rem;
   padding-bottom: 6rem;
 }
-.px-12 {
-  padding-left: 3rem;
-  padding-right: 3rem;
-}
 .pt-6 {
   padding-top: 48px;
 }
@@ -1647,14 +1649,14 @@ select {
 .pt-8 {
   padding-top: 2rem;
 }
-.pl-16 {
-  padding-left: 4rem;
-}
 .pl-2 {
   padding-left: 12px;
 }
 .pl-8 {
   padding-left: 2rem;
+}
+.pl-16 {
+  padding-left: 4rem;
 }
 .text-left {
   text-align: left;
